--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -39,17 +39,7 @@ jobs:
     - name: Start test environment
       env:
         OWM_API_KEY: ${{secrets.OWM_API_KEY}}
-      run: docker-compose -p helios up -d
-
-    - name: Check if test environment is up & running
-      run: curl -X HEAD --retry 30 --retry-delay 1 --retry-connrefused --max-time 10 --fail http://localhost:8080/actuator/health
-
-#    - name: Check if test environment is up & running
-#      uses: jtalk/url-health-check-action@v1.3
-#      with:
-#        url: http://localhost:8080/actuator/health
-#        retry-delay: 1s
-#        max-attempts: 30
+      run: docker-compose up -d
 
     - name: Functional tests
       run: echo 'todo'
